# ElysiaAI

./: .cleanignore  .dockerignore  .editorconfig  .env  .env.example  .gitignore  ARCHITECTURE.md  ARCHITECTURE_RAG.md  CHANGELOG.md  CLEANUP_REPORT.md  CODE_OF_CONDUCT.md  CODE_QUALITY_REPORT.md  CONTRIBUTING.md  DEBUG_REPORT.md  DEPLOYMENT.md  DEPLOYMENT_READY_REPORT.md  DOCKER_SETUP_GUIDE.md  ENVIRONMENT_SETUP.md  FINAL_CHECKLIST.md  FINAL_IMPLEMENTATION_COMPLETE.md  FINAL_VERIFICATION_COMPLETE.md  FINAL_VERIFICATION_REPORT.md  FINAL_VERIFICATION_REPORT_2025-12-05.md  FINAL_VERIFICATION_SUMMARY.md  INTEGRATION_COMPLETE.md  LICENSE  MAINTAINERS.md  Makefile  NEURO_INTEGRATION_MANIFEST.md  NEURO_INTEGRATION_SUMMARY.md  NEURO_INTEGRATION_VERIFICATION.md  PERFORMANCE_OPTIMIZATION.md  PLATFORM_SUPPORT.md  PRODUCTION_DEPLOY_CHECKLIST.md  PRODUCTION_VERIFICATION_REPORT.md  QUICKSTART.md  README.en.md  README.ja.md  README.md  README.new.md  (+70 more)
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  README.md  copilot-instructions.md  dependabot.yml  pull_request_template.md
.husky/: pre-commit
cloud/: README.md
config/: .env.example
cuda/: build.js  index.js  package.json
data/: elysia.db  feedback.jsonl  neuro_test.json  test_export.json
deploy/: nginx.conf.example
desktop/: README.md  README_PLATFORM.md  index.html  main.js  package.json  preload.js
dev/: bare.ts  bun-serve.ts  chat.bat  chat.ts  simple-test.ts  test-server.ts
docs/: ADVANCED_FEATURES.md  AIRI_IMPLEMENTATION_REPORT.md  API.md  ARCHITECTURE.md  ARCHITECTURE_GLOSSARY.md  BENCHMARKS.md  CASUAL_CHAT_GUIDE.md  CHAT_HISTORY_SETUP.md  CUSTOMIZATION_SECURITY_GUIDE.md  DATABASE_BEST_PRACTICES.md  DATABASE_INTEGRATION_COMPLETE.md  DEEP_STRUCTURE_UPDATE.md  DEMO_AIRI.md  DEPLOYMENT_GUIDE.md  DISASTER_RECOVERY.md  ElysiaAI-textbook.md  GETTING_STARTED.md  GPG_KEY_GUIDE.md  I18N_GUIDE.md  IMPROVEMENT_REPORT.md  INTEGRATION_GUIDE.md  LINUX_SETUP.md  NEURO_INTEGRATION.md  OPENAI_INTEGRATION.md  OPTIMIZATION_REPORT.md  PERSONAL_DEV_FEATURES.md  PERSONAL_DEV_IMPLEMENTATION.md  PHASE5_API_SPEC.md  PHASE5_COMPLETE.md  PRISMA7_MIGRATION.md  PRISMA7_SETUP.md  PRISMA7_SETUP_COMPLETE.md  PROJECT_STRUCTURE.md  REPO_TEXTBOOK.md  REPO_TEXTBOOK_BEGINNER.md  REPO_TEXTBOOK_BEGINNER_CLEAN.md  SECURITY.md  SECURITY_ARCHITECTURE.md  SECURITY_AUDIT.md  SECURITY_GUIDELINES.md  (+17 more)
game/: CLI_MANUAL.md  DOCKER.md  README.md  cli-client.ts  client.html  package.json  server.ts
lib/: database-utils.ts
locales/: en.json  ja.json
mobile/: BUILD_PLATFORM.md  README.md  app.json  eas.json  package.json  tsconfig.json
monitoring/: alertmanager.yml  alerts.yml  docker-compose.yml  grafana-dashboard.json  prometheus.yml
native/: BUILD_PLATFORM.md  binding.gyp  index.js  package.json
playwright-report/: index.html
prisma/: dev.db  prisma.config.js  prisma.config.ts  prisma.dev.config.js  schema.prisma
prompts/: cyrene_concept.prompt.txt  default.txt  elysia.prompt.txt  system.txt
public/: admin-dashboard.html  admin-extended.html  admin.html  demo-airi.html  elisia-vtuber.html  hack.html  health-ui.html  index-new.html  index-old.html  index.html  infra-dashboard.html  jwt-api-test.html  ops-dashboard.html
python/: Dockerfile  ai_backend.py  delete_tweets_from_archive.py  fastapi_server.py  network_simulation_api.py  requirements.txt  twitter_client.py
rust/: ADVANCED_FEATURES.md  BUILD_PLATFORM.md  Cargo.toml  README.md  README_NETWORK.md  README_TCPIP.md  SETUP.md  TEXTBOOK.md  build.rs  package.json
rust/.cargo/: config.toml
rust/examples/: advanced_features.rs  tcp_ip_demo.rs
rust/scripts/: build.ps1  build.sh
rust/src/: config.rs  error.rs  lib.rs
rust/src/network/: buffer.rs  capture.rs  congestion.rs  device.rs  ebpf.rs  ethernet.rs  ip.rs  mod.rs  offload.rs  parallel.rs  quic.rs  socket.rs  tcp.rs  udp.rs
rust/src/text/: mod.rs
rust/tests/: advanced_features_test.rs  advanced_integration_test.rs  integration_tests.rs  network_integration_test.rs
scripts/: README.md  advanced-security-features.sh  api-e2e-test.ps1  api-security-hardening.sh  backup-db.ps1  backup-setup.sh  backup.ps1  build-desktop.ps1  build-desktop.sh  build-game.ps1  build-game.sh  check-services.ps1  clean.ps1  clean.sh  cleanup-old-structure.ps1  complete-security-setup.sh  database-security-hardening.sh  deploy-production.ps1  dev-test.ts  (+71 more)
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/src/: main.rs
wasm/: Cargo.toml  build.sh  demo.html  package.json
wasm/src/: lib.rs
(+267 files in other folders)
