[package]
name = "elysia-wasm"
version = "1.0.0"
edition = "2021"
description = "WebAssembly bindings for Elysia AI"
repository = "https://github.com/Elysia20220909/ElysiaAI"
license = "AGPL-3.0-or-later"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "console",
    "Document",
    "Element",
    "Window",
] }
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
getrandom = { version = "0.2", features = ["js"] }

elysia-rust = { path = "../rust", version = "1.0.0" }

[dev-dependencies]
wasm-bindgen-test = "1"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true
codegen-units = 1
strip = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
