[package]
name = "elysia-ai-tauri"
version = "1.0.0"
description = "Elysia AI Desktop - Tauri Edition"
authors = ["Elysia Team"]
edition = "2021"

[lib]
name = "elysia_ai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.1", features = ["protocol-asset"] }
tauri-plugin-shell = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["blocking"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-cli = "2.0"

[dependencies.reqwest]
version = "0.11"
features = ["blocking"]
